Improve i386 slack failure message

--- a/.github/workflows/alpine-32bit-build-and-test.yaml
+++ b/.github/workflows/alpine-32bit-build-and-test.yaml
@@ -1,4 +1,4 @@
-name: Linux 32-bit x86
+name: Regression Linux i386
 on:
   schedule:
     # run daily 20:00 on master branch
@@ -29,6 +29,16 @@ jobs:
     - name: Install build dependencies
       run: |
         apk add --no-cache --virtual .build-deps coreutils dpkg-dev findutils gcc libc-dev make util-linux-dev diffutils cmake openssl-dev sudo flex bison
+
+    - name: Slack Notification
+#      if: failure()
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_COLOR: '#ff0000'
+        SLACK_USERNAME: GitHub Action
+        SLACK_TITLE: Regression 32-bit PG${{ matrix.pg }} ${{ job.status }}
+        SLACK_MESSAGE: ${{ github.event.head_commit.message }}
+      uses: rtCamp/action-slack-notify@v2.0.2
 
     - name: Build pg_isolation_regress
       run: |
@@ -73,11 +83,4 @@ jobs:
       with:
         name: PostgreSQL log
         path: postmaster.log
-
-    - name: Slack Notification
-      if: failure()
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        SLACK_TITLE: Regression 32-bit PG${{ matrix.pg }} ${{ job.status }}
-      uses: rtCamp/action-slack-notify@v2.0.2
 
